--- a/Blog - Express MongoDB/views/index.ejs
+++ b/Blog - Express MongoDB/views/index.ejs
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Blog</title>
+</head>
+<body>
+  <div class="container">
+    <h1 class="mb-4">Blog Articles</h1>
+    <a href="/articles/new" class="btn btn-success">New Article</a>
+      <div class="card mt-4">
+        <div class="card-body">
+          <h4 class="card-title"><%= article.title%></h4>
+          <div class="card-subtitle text-muted mb-2"><%= article.createdAt%>
+          </div>
+          <div class="card-text mb-2"> <%= article.description %></div>
+          <a href="articles/" class="btn btn-primary">Read More</a>
+          <a href="articles/edit/" class="btn btn-info">Edit</a>
+          <form action="/articles/" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">Delete</button>
+          </form>
+        </div>
+      </div>
+  </div>
+</body>
 </html>
